updated css to fix book page alignment

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ font header .navbar-default .navbar-nav li a:hover {
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
-  padding: 200px 0 200px 0;
+  padding: 200px 0 280px 0;
   position: relative;
 }
 #slider:before {
@@ -439,10 +439,14 @@ img {
   background: linear-gradient(to left,  #05070a, #010a18c9 70%);
   opacity: 0.8;
 }
+
+/*---------------------------------------------
+					Fix the alignment of Book - Rajib padding left from 90 to 1
+-----------------------------------------------*/
 #global-header .block {
   color: #E3E3E4;
   margin: 0 auto;
-  padding-left: 90px;
+  padding-left: 01px;
   text-align: center;
 }
 #global-header .block h1 {
